# rust-graphql-server

./: .gitignore  Cargo.toml  dev.db  dev.db-journal
src/: db.rs  gql.rs  main.rs  model.rs  schema.rs
src/db/: accounting_controller.rs  db_controller.rs  db_model.rs  db_schema.rs
src/gql/: gql_resolver.rs  gql_schema.rs
