[package]
name = "graphql-server"
version = "0.1.0"
authors = ["esainty <eden.sainty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-alpha.3"
juniper = "0.14.2"
rusqlite = "0.23.1"
diesel = {version = "1.4.5", features = ["sqlite"]}
dotenv = "0.15.0"
sha2 = "0.9.0"